[Sema] Refactor `Differentiable` derived conformances and fix bugs.

Fix inherited logic for synthesized associated structs for `Differentiable`.
Associated structs now correctly:
- Conform to `AdditiveArithmetic` even if they have no members.
- Conform to `VectorNumeric` if all members have the same `Scalar` type.

Resolves SR-9756.